# Tensai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2e8682303682_initial.py  47f01fdcd20b_add_refresh_tokens_table.py  e2b38bc244c6_add_sources_table.py
app/: __init__.py  auth_utils.py  config.py  database.py  document_loader.py  email_service.py  evaluation.py  graph.py  llm.py  main.py  models.py  retrieval.py
app/routers/: ask.py  auth.py  history.py  ingest.py
docs/: FLUTTER_APP_WIREFRAME.md
tensai/: README.md  pubspec.yaml
tensai/android/app/: build.gradle.kts
tensai/ios/Runner/: Info.plist
tensai/ios/Runner.xcodeproj/: project.pbxproj
tensai/lib/: main.dart  router.dart
tensai/lib/core/: app_colors.dart  constants.dart  input_styles.dart  storage.dart  theme.dart
tensai/lib/models/: ask_response.dart  auth_response.dart  history_item.dart  source_item.dart
tensai/lib/providers/: ask_provider.dart  ask_provider.g.dart  auth_provider.dart  auth_provider.g.dart  history_provider.dart  history_provider.g.dart  ingest_provider.dart  settings_provider.dart  settings_provider.g.dart  sources_provider.dart  sources_provider.g.dart
tensai/lib/screens/: ask_screen.dart  history_screen.dart  send_otp_screen.dart  settings_screen.dart  sources_screen.dart  splash_screen.dart  verify_otp_screen.dart
tensai/lib/services/: api_service.dart  auth_service.dart  (+2 more)
tensai/linux/: CMakeLists.txt
tensai/test/: widget_test.dart
tensai/web/: index.html  manifest.json
tensai/windows/: CMakeLists.txt
(+16 files in other folders)
